fixed dark mode on articles page glitch

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,6 @@
 main {
     padding: 80px 1rem 150px;
+    min-height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
